--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Setlink Profile</title>
+    <title>Setlink</title>
     <link rel="stylesheet" href="styling/style.css">
 </head>
 <body class="landing">
@@ -48,6 +48,7 @@
     <section class="footer-note">
         <p>Build your Setlink, share it with fans, and stay in the moment.</p>
     </section>
+
     <script>
         const userSelect = document.getElementById('user-select');
         userSelect?.addEventListener('change', (e) => {
