--- a/oisin/mysetlink.html
+++ b/oisin/mysetlink.html
@@ -9,33 +9,9 @@
 <body>
     <main class="page">
         <section class="card" aria-label="Profile card">
-            <img class="avatar" src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?auto=format&fit=crop&w=300&q=80" alt="Oisin portrait">
+            <img class="avatar" src="../400_New black Oisin Murray - The Old Hairdresser's - Fennell Records - 23_12_22 - Sean Bruce Monteith-06-min 1.png" alt="Oisin portrait">
             <h1 class="name">Oisin OMuiri</h1>
             <p class="tagline">Professional musician of 10 years. Getting people to sing and dance!</p>
-        <div class="cta-list" aria-label="Call to action buttons">
-            <button class="cta tip-trigger" type="button">
-                <svg viewBox="0 0 24 24"><path d="M12.3937 4.45362C10.725 4.45081 8.63434 4.97816 6.57184 6.05159C4.51263 7.12503 2.88044 8.53128 1.92231 9.90472C0.963719 11.2735 0.7045 12.5485 1.17606 13.4578C1.64809 14.3625 2.84153 14.8828 4.5145 14.8828C6.18747 14.8875 8.27809 14.3578 10.3359 13.2891C12.3984 12.2157 14.0297 10.8047 14.9859 9.43597C15.9468 8.06722 16.2 6.79222 15.7312 5.88284C15.2578 4.97816 14.0672 4.45362 12.3937 4.45362ZM16.7015 7.74847C16.5375 8.46566 16.1812 9.20159 15.6797 9.91878C14.6203 11.4328 12.8906 12.9094 10.725 14.0344C8.55934 15.1641 6.36091 15.7313 4.51403 15.7313C3.64216 15.7313 2.83403 15.6 2.15294 15.3235L2.64934 16.2797C3.12184 17.1891 4.312 17.7094 5.98591 17.7094C7.65934 17.7094 9.74997 17.1844 11.8078 16.111C13.8703 15.0422 15.5015 13.6313 16.4578 12.2578C17.414 10.8891 17.6765 9.61409 17.2031 8.70941L16.7015 7.74847ZM18.0515 8.53597C18.5765 9.78753 18.1547 11.311 17.1515 12.7407C16.2656 14.011 14.9109 15.2438 13.2328 16.275C13.7531 16.3313 14.2968 16.3594 14.85 16.3594C17.1703 16.3594 19.2703 15.8625 20.7515 15.0891C22.2375 14.3157 23.0531 13.3032 23.0531 12.2813C23.0531 11.2594 22.2375 10.2469 20.7515 9.47347C19.9968 9.07972 19.0781 8.75628 18.0515 8.53597ZM23.0531 14.386C22.575 14.9438 21.9187 15.436 21.1453 15.8391C19.5047 16.6922 17.2922 17.2032 14.85 17.2032C13.8562 17.2032 12.9 17.1188 12.0047 16.9594C10.9172 17.5078 9.82497 17.9157 8.77497 18.1828C8.83122 18.2157 8.88747 18.2438 8.94841 18.2766C10.4297 19.05 12.5297 19.5469 14.85 19.5469C17.1703 19.5469 19.2703 19.05 20.7515 18.2766C22.2375 17.5032 23.0531 16.4907 23.0531 15.4688V14.386Z" fill="#ECEBEB"></path></svg>
-                Tip
-            </button>
-            <a class="cta secondary" href="https://g.page/r/CZ7tJcVOO9vbEAE/review" target="_blank" rel="noopener noreferrer" role="button">
-                <svg class="cta-icon" viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#ffffff" opacity="0.85"></path>
-                </svg>
-                Review
-            </a>
-        </div>
-        <div class="tip-panel" aria-label="Tip panel">
-            <h3>Support the artist</h3>
-            <form id="tip-form">
-                <div class="request-field">
-                    <label for="tip-amount">Tip amount (€)</label>
-                    <input id="tip-amount" class="request-input" type="number" min="1" step="0.5" value="5" />
-                </div>
-                <div id="tip-element" class="stripe-placeholder">Stripe widget goes here</div>
-                <button id="tip-submit" class="cta" type="submit" style="width: 100%; margin-top: 10px;">Send tip</button>
-                <p id="tip-status" class="login-subtitle" style="margin-top: 8px;"></p>
-            </form>
-        </div>
         <section class="songs" aria-label="Song search and list">
             <form class="search" role="search">
                 <label class="search-label" for="song-search">Make a request</label>
@@ -46,6 +22,34 @@
                     <input id="song-search" type="search" name="q" placeholder="What do you want to hear?" autocomplete="off">
                 </div>
             </form>
+            <div class="cta-list" aria-label="Call to action buttons">
+                <button class="cta tip-trigger" type="button">
+                    <svg viewBox="0 0 24 24"><path d="M12.3937 4.45362C10.725 4.45081 8.63434 4.97816 6.57184 6.05159C4.51263 7.12503 2.88044 8.53128 1.92231 9.90472C0.963719 11.2735 0.7045 12.5485 1.17606 13.4578C1.64809 14.3625 2.84153 14.8828 4.5145 14.8828C6.18747 14.8875 8.27809 14.3578 10.3359 13.2891C12.3984 12.2157 14.0297 10.8047 14.9859 9.43597C15.9468 8.06722 16.2 6.79222 15.7312 5.88284C15.2578 4.97816 14.0672 4.45362 12.3937 4.45362ZM16.7015 7.74847C16.5375 8.46566 16.1812 9.20159 15.6797 9.91878C14.6203 11.4328 12.8906 12.9094 10.725 14.0344C8.55934 15.1641 6.36091 15.7313 4.51403 15.7313C3.64216 15.7313 2.83403 15.6 2.15294 15.3235L2.64934 16.2797C3.12184 17.1891 4.312 17.7094 5.98591 17.7094C7.65934 17.7094 9.74997 17.1844 11.8078 16.111C13.8703 15.0422 15.5015 13.6313 16.4578 12.2578C17.414 10.8891 17.6765 9.61409 17.2031 8.70941L16.7015 7.74847ZM18.0515 8.53597C18.5765 9.78753 18.1547 11.311 17.1515 12.7407C16.2656 14.011 14.9109 15.2438 13.2328 16.275C13.7531 16.3313 14.2968 16.3594 14.85 16.3594C17.1703 16.3594 19.2703 15.8625 20.7515 15.0891C22.2375 14.3157 23.0531 13.3032 23.0531 12.2813C23.0531 11.2594 22.2375 10.2469 20.7515 9.47347C19.9968 9.07972 19.0781 8.75628 18.0515 8.53597ZM23.0531 14.386C22.575 14.9438 21.9187 15.436 21.1453 15.8391C19.5047 16.6922 17.2922 17.2032 14.85 17.2032C13.8562 17.2032 12.9 17.1188 12.0047 16.9594C10.9172 17.5078 9.82497 17.9157 8.77497 18.1828C8.83122 18.2157 8.88747 18.2438 8.94841 18.2766C10.4297 19.05 12.5297 19.5469 14.85 19.5469C17.1703 19.5469 19.2703 19.05 20.7515 18.2766C22.2375 17.5032 23.0531 16.4907 23.0531 15.4688V14.386Z" fill="#ECEBEB"></path></svg>
+                    Tip
+                </button>
+                <button class="cta secondary review-trigger" type="button">
+                    <svg class="cta-icon" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#ffffff" opacity="0.85"></path>
+                    </svg>
+                    Review
+                </button>
+            </div>
+            <div class="tip-panel" aria-label="Tip panel">
+                <h3>Support the artist</h3>
+                <p class="tip-copy">Slide to send a tip via Stripe.</p>
+                <div class="slider" role="button" aria-label="Slide right to confirm tip" tabindex="0">
+                    <div class="slider-track">
+                        <div class="slider-thumb" data-thumb>
+                            <span class="slider-arrow">&#xBB;</span>
+                        </div>
+                        <span class="slider-hint">Slide to tip</span>
+                    </div>
+                </div>
+            </div>
+            <div class="review-panel" aria-label="Review panel">
+                <h3>Leave a review</h3>
+                <a class="review-link" href="https://g.page/r/CZ7tJcVOO9vbEAE/review" target="_blank" rel="noopener noreferrer">Go to review page</a>
+            </div>
             <h2 class="songs-title">Popular Songs</h2>
             <div class="song-list" role="list" aria-live="polite">
                 <div class="song-item" role="listitem" data-text="brown eyed girl van morrison rock">
@@ -100,9 +104,9 @@
                         <svg viewBox="0 0 24 24"><path d="M21.426 11.095L4.42601 3.09504C4.25482 3.0145 4.0643 2.98416 3.87657 3.00756C3.68883 3.03095 3.51158 3.10713 3.36541 3.22723C3.21923 3.34733 3.11012 3.50644 3.05076 3.68607C2.99139 3.8657 2.98419 4.05849 3.03001 4.24205L4.24201 9.09104L12 12L4.24201 14.909L3.03001 19.758C2.98333 19.9417 2.98992 20.1349 3.04902 20.315C3.10811 20.4951 3.21726 20.6546 3.3637 20.7749C3.51014 20.8953 3.68782 20.9714 3.87594 20.9944C4.06406 21.0175 4.25486 20.9865 4.42601 20.905L21.426 12.905C21.5978 12.8243 21.7431 12.6963 21.8448 12.536C21.9466 12.3758 22.0006 12.1899 22.0006 12C22.0006 11.8102 21.9466 11.6243 21.8448 11.464C21.7431 11.3038 21.5978 11.1758 21.426 11.095Z" fill="#FFCC66"></path></svg>
                     </button>
                 </div>
-                <div class="song-item" role="listitem" data-text="wagon wheel old crow medicine show folk">
-                    <div class="song-meta">
-                        <p class="song-title">Wagon Wheel</p>
+            <div class="song-item" role="listitem" data-text="wagon wheel old crow medicine show folk">
+                <div class="song-meta">
+                    <p class="song-title">Wagon Wheel</p>
                         <div class="song-subline">
                             <span class="song-artist">Old Crow Medicine Show</span>
                             <span class="song-dot" aria-hidden="true"></span>
@@ -119,7 +123,8 @@
         </section>
     </main>
     <div class="modal-overlay request-overlay" data-request-modal>
-        <div class="modal">
+        <div class="request-sheet">
+            <div class="request-grabber" aria-hidden="true"></div>
             <div class="modal-header">
                 <h2>Send this request</h2>
             </div>
