--- a/oisin/mysetlink.html
+++ b/oisin/mysetlink.html
@@ -9,7 +9,7 @@
 <body>
     <main class="page">
         <section class="card" aria-label="Profile card">
-            <img class="avatar" src="../400_New black Oisin Murray - The Old Hairdresser's - Fennell Records - 23_12_22 - Sean Bruce Monteith-06-min 1.png" alt="Oisin portrait">
+            <img class="avatar" src="../oisin/400_New black Oisin Murray - The Old Hairdresser's - Fennell Records - 23_12_22 - Sean Bruce Monteith-06-min 1.png" alt="Oisin portrait">
             <h1 class="name">Oisin OMuiri</h1>
             <p class="tagline">Professional musician of 10 years. Getting people to sing and dance!</p>
         <section class="songs" aria-label="Song search and list">
