--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body class="landing green-landing">
     <header class="top-nav">
-        <a class="hero-logo small" href="/">Setlink</a>
+        <a class="hero-logo small" href="/">
+            <picture>
+                <source srcset="Setlink_LogoWhite1.svg" type="image/svg+xml">
+                <img src="Setlink_LogoWhite1.png" alt="Setlink logo">
+            </picture>
+        </a>
         <div class="nav-actions">
             <button id="user-search-toggle" class="nav-icon" aria-label="Search users">
                 <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <path d="M15.5 14h-.79l-.28-.27A6.5 6.5 0 1016 9.5a6.47 6.47 0 00-1.5 4.23l.27.27h.79l5 5L20.5 19l-5-5zm-6 0A4.5 4.5 0 1114 9.5 4.5 4.5 0 019.5 14z" fill="#ffffff"/>
+                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-3.33 0-6 1.34-6 3v1h12v-1c0-1.66-2.67-3-6-3z" fill="#ffffff"/>
                 </svg>
             </button>
             <div id="user-dropdown" class="user-dropdown" hidden>
-                <button class="user-item" data-url="oisin/" type="button">
+                <button class="user-item" data-url="oisin/mysetlink.html" type="button">
                     <img src="oisin/400_New black Oisin Murray - The Old Hairdresser's - Fennell Records - 23_12_22 - Sean Bruce Monteith-06-min 1.png" alt="Oisin avatar">
                     <span>Oisin</span>
                 </button>
@@ -37,7 +42,6 @@
     </header>
     <main class="hero hero-linktree">
         <div class="hero-inner">
-            <a class="hero-logo" href="/">Setlink</a>
             <h1>One link to engage your audience</h1>
             <p class="hero-sub highlight">Designed to let fans <span class="gold-highlight">request songs</span>, <span class="gold-highlight">tip</span>, and leave <span class="gold-highlight">reviews</span> without interrupting the show.</p>
             <button id="scan-random" class="cta hero-primary" type="button">Scan</button>
@@ -47,25 +51,7 @@
         </div>
     </main>
 
-    <script>
-        const userSelect = document.getElementById('user-select');
-        userSelect?.addEventListener('change', (e) => {
-            const target = e.target;
-            const value = target?.value;
-            if (value) {
-                window.location.href = value;
-            }
-        });
-
-        const scanButton = document.getElementById('scan-random');
-        if (scanButton) {
-            const userUrls = ['oisin/mysetlink.html', 'emma/mysetlink.html', 'liam/mysetlink.html', 'sofia/mysetlink.html'];
-            scanButton.addEventListener('click', () => {
-                const pick = userUrls[Math.floor(Math.random() * userUrls.length)];
-                window.location.href = pick;
-            });
-        }
-    </script>
+    <script src="script.js"></script>
     <footer class="site-footer">Powered by Setlink 2025.</footer>
 </body>
 </html>
