--- a/liam/mysetlink.html
+++ b/liam/mysetlink.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styling/style.css">
 </head>
 <body>
+    <a class="page-logo" href="https://mysetlink.io/"><picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture></a>
     <main class="page">
         <section class="card" aria-label="Profile card">
             <img class="avatar" src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?auto=format&fit=crop&w=300&q=80" alt="Liam portrait">
