--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body class="landing green-landing">
     <header class="top-nav">
-        <a class="hero-logo small" href="/">
+        <a class="hero-logo small" href="https://mysetlink.io" aria-label="Go to MySetlink.io">
             <picture>
                 <source srcset="Setlink_LogoWhite1.svg" type="image/svg+xml">
                 <img src="Setlink_LogoWhite1.png" alt="Setlink logo">
             </picture>
+            <span class="hero-logo-text">Setlink</span>
         </a>
         <div class="nav-actions">
             <button id="user-search-toggle" class="nav-icon" aria-label="Search users">
