--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     </header>
     <main class="hero hero-linktree">
         <div class="hero-inner">
+            <a class="hero-brand" href="https://mysetlink.io" aria-label="Go to MySetlink.io">
+                <picture>
+                    <source srcset="Setlink_LogoWhite1.svg" type="image/svg+xml">
+                    <img src="Setlink_LogoWhite1.png" alt="Setlink logo">
+                </picture>
+                <span class="hero-brand-text">Setlink</span>
+            </a>
             <h1>One link to engage your audience</h1>
             <p class="hero-sub highlight">Designed to let fans <span class="gold-highlight">request songs</span>, <span class="gold-highlight">tip</span>, and leave <span class="gold-highlight">reviews</span> without interrupting the show.</p>
             <button id="scan-random" class="cta hero-primary" type="button">Scan</button>
